--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="diffeq_methods.ipynb">Differential Equation Methods</a>
+<a href="https://nbviewer.org/urls/alexandredbl.github.io/diffeq_methods.ipynb">Differential Equation Methods</a>
